@@ -1,59 +1,78 @@
 package org.iu.presentmanager.gifts;
 
+import org.iu.presentmanager.config.WebConfig;
+import org.iu.presentmanager.exceptions.ResourceNotFoundException;
 import org.iu.presentmanager.giftIdeas.GiftIdea;
+import org.iu.presentmanager.security.SecurityConfig;
+import org.iu.presentmanager.security.SupabaseJwtConverter;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
-import org.junit.jupiter.api.extension.ExtendWith;
-import org.mockito.InjectMocks;
-import org.mockito.Mock;
-import org.mockito.junit.jupiter.MockitoExtension;
-import org.springframework.http.HttpStatus;
-import org.springframework.http.ResponseEntity;
+import org.springframework.beans.factory.annotation.Autowired;
+import org.springframework.boot.webmvc.test.autoconfigure.WebMvcTest;
+import org.springframework.context.annotation.Import;
+import org.springframework.test.context.ActiveProfiles;
+import org.springframework.test.context.bean.override.mockito.MockitoBean;
+import org.springframework.test.web.servlet.MockMvc;
+import org.springframework.test.web.servlet.result.MockMvcResultHandlers;
+import tools.jackson.databind.ObjectMapper;
 
 import java.time.LocalDate;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
-import static org.junit.jupiter.api.Assertions.*;
+import static org.hamcrest.Matchers.hasSize;
 import static org.mockito.ArgumentMatchers.any;
 import static org.mockito.ArgumentMatchers.eq;
 import static org.mockito.Mockito.*;
+import static org.springframework.http.MediaType.APPLICATION_JSON;
+import static org.springframework.security.test.web.servlet.request.SecurityMockMvcRequestPostProcessors.jwt;
+import static org.springframework.test.web.servlet.request.MockMvcRequestBuilders.*;
+import static org.springframework.test.web.servlet.result.MockMvcResultMatchers.*;
 
-@ExtendWith(MockitoExtension.class)
+@WebMvcTest(GiftController.class)
+@ActiveProfiles("test")
+@Import({SecurityConfig.class, WebConfig.class})
 class GiftControllerTest {
 
-    @Mock
+    @Autowired
+    private MockMvc mockMvc;
+
+    @Autowired
+    private ObjectMapper objectMapper;
+
+    @MockitoBean
     private GiftService giftService;
 
-    @InjectMocks
-    private GiftController giftController;
+    @MockitoBean
+    private SupabaseJwtConverter supabaseJwtConverter;
 
-    private UUID userId;
-    private UUID personId;
-    private UUID occasionId;
-    private UUID giftId;
-    private UUID giftIdeaId;
+    private final UUID userId     = UUID.fromString("00000000-0000-0000-0000-000000000001");
+    private final UUID personId   = UUID.fromString("00000000-0000-0000-0000-000000000002");
+    private final UUID occasionId = UUID.fromString("00000000-0000-0000-0000-000000000003");
+    private final UUID giftId     = UUID.fromString("00000000-0000-0000-0000-000000000004");
+    private final UUID giftIdeaId = UUID.fromString("00000000-0000-0000-0000-000000000005");
+
     private Gift testGift;
 
     @BeforeEach
     void setUp() {
-        userId = UUID.randomUUID();
-        personId = UUID.randomUUID();
-        occasionId = UUID.randomUUID();
-        giftId = UUID.randomUUID();
-        giftIdeaId = UUID.randomUUID();
+        testGift = createTestGift("Test Gift", GiftStatus.PLANNED);
+    }
 
-        testGift = new Gift();
-        testGift.setId(giftId);
-        testGift.setUserId(userId);
-        testGift.setPersonId(personId);
-        testGift.setOccasionId(occasionId);
-        testGift.setTitle("Test Gift");
-        testGift.setStatus(GiftStatus.PLANNED);
+    private Gift createTestGift(String title, GiftStatus status) {
+        Gift gift = new Gift();
+        gift.setId(giftId);
+        gift.setUserId(userId);
+        gift.setPersonId(personId);
+        gift.setOccasionId(occasionId);
+        gift.setTitle(title);
+        gift.setStatus(status);
+        return gift;
     }
 
     @Test
-    void shouldCreateGiftAndReturnCreatedStatus() {
+    void shouldCreateGiftAndReturnCreatedStatus() throws Exception {
         // GIVEN
         Gift newGift = new Gift();
         newGift.setPersonId(personId);
@@ -62,32 +81,76 @@ class GiftControllerTest {
 
         when(giftService.createGift(any(Gift.class), eq(userId))).thenReturn(testGift);
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.createGift(newGift, userId);
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(newGift)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(giftId.toString()))
+                .andExpect(jsonPath("$.title").value("Test Gift"))
+                .andExpect(jsonPath("$.status").value("PLANNED"));
 
-        // THEN
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(giftId, response.getBody().getId());
-        verify(giftService, times(1)).createGift(any(Gift.class), eq(userId));
+        verify(giftService).createGift(any(Gift.class), eq(userId));
     }
 
     @Test
-    void shouldReturnCreatedGiftObject() {
+    void shouldReturnBadRequestWhenCreatingGiftWithMissingTitle() throws Exception {
+        // GIVEN — title fehlt (@NotBlank)
+        String invalidGiftJson = "{\"personId\":\"" + personId + "\",\"occasionId\":\"" + occasionId + "\"}";
+
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(invalidGiftJson))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isBadRequest());
+
+        verify(giftService, never()).createGift(any(), any());
+    }
+
+    @Test
+    void shouldReturnBadRequestWhenCreatingGiftWithMissingPersonId() throws Exception {
+        // GIVEN — personId fehlt (@NotNull)
+        String invalidGiftJson = "{\"title\":\"Gift\",\"occasionId\":\"" + occasionId + "\"}";
+
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(invalidGiftJson))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isBadRequest());
+
+        verify(giftService, never()).createGift(any(), any());
+    }
+
+    @Test
+    void shouldReturnNotFoundWhenPersonDoesNotExistOnCreate() throws Exception {
         // GIVEN
         Gift newGift = new Gift();
-        newGift.setTitle("Test Gift");
-        when(giftService.createGift(any(Gift.class), eq(userId))).thenReturn(testGift);
+        newGift.setPersonId(personId);
+        newGift.setOccasionId(occasionId);
+        newGift.setTitle("Gift");
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.createGift(newGift, userId);
+        when(giftService.createGift(any(Gift.class), eq(userId)))
+                .thenThrow(new ResourceNotFoundException("Person not found with id: " + personId));
 
-        // THEN
-        assertEquals(testGift, response.getBody());
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(newGift)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
+
+        verify(giftService).createGift(any(Gift.class), eq(userId));
     }
 
     @Test
-    void shouldCreateGiftFromGiftIdeaAndReturnCreatedStatus() {
+    void shouldCreateGiftFromGiftIdeaAndReturnCreatedStatus() throws Exception {
         // GIVEN
         GiftIdea giftIdea = new GiftIdea();
         giftIdea.setId(giftIdeaId);
@@ -95,316 +158,512 @@ class GiftControllerTest {
         giftIdea.setOccasionId(occasionId);
         giftIdea.setTitle("Test Gift Idea");
 
+        when(giftService.createGiftFromGiftIdea(any(GiftIdea.class), eq(userId))).thenReturn(testGift);
+
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts/gift-idea")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(giftIdea)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isCreated())
+                .andExpect(jsonPath("$.id").value(giftId.toString()))
+                .andExpect(jsonPath("$.title").value("Test Gift"));
+
+        verify(giftService).createGiftFromGiftIdea(any(GiftIdea.class), eq(userId));
+    }
+
+    @Test
+    void shouldReturnNotFoundWhenGiftIdeaDoesNotExistOnCreate() throws Exception {
+        // GIVEN
+        GiftIdea giftIdea = new GiftIdea();
+        giftIdea.setId(giftIdeaId);
+        giftIdea.setPersonId(personId);
+        giftIdea.setOccasionId(occasionId);
+        giftIdea.setTitle("Ghost Idea");
+
         when(giftService.createGiftFromGiftIdea(any(GiftIdea.class), eq(userId)))
-                .thenReturn(testGift);
+                .thenThrow(new ResourceNotFoundException("Gift idea not found with id: " + giftIdeaId));
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.createGiftFromGiftIdea(giftIdea, userId);
+        // WHEN & THEN
+        mockMvc.perform(post("/gifts/gift-idea")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(giftIdea)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
 
-        // THEN
-        assertEquals(HttpStatus.CREATED, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(giftId, response.getBody().getId());
-        verify(giftService, times(1)).createGiftFromGiftIdea(any(GiftIdea.class), eq(userId));
+        verify(giftService).createGiftFromGiftIdea(any(GiftIdea.class), eq(userId));
     }
 
     @Test
-    void shouldGetAllGiftsWhenNoFilterParametersProvided() {
+    void shouldReturnAllGiftsWhenNoFilterProvided() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getAllGiftsByUser(userId)).thenReturn(gifts);
+        when(giftService.getAllGiftsByUser(userId)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, null, null, null, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].id").value(giftId.toString()))
+                .andExpect(jsonPath("$[0].title").value("Test Gift"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        assertEquals(giftId, response.getBody().getFirst().getId());
-        verify(giftService, times(1)).getAllGiftsByUser(userId);
+        verify(giftService).getAllGiftsByUser(userId);
+        verifyNoMoreInteractions(giftService);
     }
 
     @Test
-    void shouldGetGiftsByPersonWhenPersonIdProvided() {
+    void shouldReturnEmptyListWhenNoGiftsExist() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByPerson(userId, personId)).thenReturn(gifts);
+        when(giftService.getAllGiftsByUser(userId)).thenReturn(Collections.emptyList());
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, personId, null, null, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(0)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByPerson(userId, personId);
+        verify(giftService).getAllGiftsByUser(userId);
+    }
+
+    @Test
+    void shouldFilterGiftsByPersonId() throws Exception {
+        // GIVEN
+        when(giftService.getGiftsByPerson(userId, personId)).thenReturn(List.of(testGift));
+
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("personId", personId.toString())
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
+
+        verify(giftService).getGiftsByPerson(userId, personId);
         verify(giftService, never()).getAllGiftsByUser(any());
     }
 
     @Test
-    void shouldGetGiftsByOccasionWhenOccasionIdProvided() {
+    void shouldFilterGiftsByOccasionId() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByOccasion(userId, occasionId)).thenReturn(gifts);
+        when(giftService.getGiftsByOccasion(userId, occasionId)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, null, occasionId, null, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("occasionId", occasionId.toString())
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByOccasion(userId, occasionId);
+        verify(giftService).getGiftsByOccasion(userId, occasionId);
     }
 
     @Test
-    void shouldGetGiftsByStatusWhenStatusProvided() {
+    void shouldFilterGiftsByStatus() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByStatus(userId, GiftStatus.PLANNED)).thenReturn(gifts);
+        when(giftService.getGiftsByStatus(userId, GiftStatus.PLANNED)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, null, null, GiftStatus.PLANNED, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("status", "PLANNED")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].status").value("PLANNED"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByStatus(userId, GiftStatus.PLANNED);
+        verify(giftService).getGiftsByStatus(userId, GiftStatus.PLANNED);
     }
 
     @Test
-    void shouldGetGiftsByPersonAndOccasionWhenBothProvided() {
+    void shouldFilterGiftsByPersonAndOccasion() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByPersonAndOccasion(userId, personId, occasionId)).thenReturn(gifts);
+        when(giftService.getGiftsByPersonAndOccasion(userId, personId, occasionId))
+                .thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, personId, occasionId, null, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("personId", personId.toString())
+                        .param("occasionId", occasionId.toString())
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByPersonAndOccasion(userId, personId, occasionId);
+        verify(giftService).getGiftsByPersonAndOccasion(userId, personId, occasionId);
     }
 
     @Test
-    void shouldGetGiftsByGiftIdeaId() {
+    void shouldFilterGiftsByPersonAndStatus() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByGiftIdea(userId, giftIdeaId)).thenReturn(gifts);
+        when(giftService.getGiftsByPersonAndStatus(userId, personId, GiftStatus.PLANNED))
+                .thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, null, null, null, giftIdeaId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("personId", personId.toString())
+                        .param("status", "PLANNED")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByGiftIdea(userId, giftIdeaId);
+        verify(giftService).getGiftsByPersonAndStatus(userId, personId, GiftStatus.PLANNED);
     }
 
     @Test
-    void shouldReturnEmptyListWhenNoGiftsFound() {
+    void shouldFilterGiftsByGiftIdeaId() throws Exception {
         // GIVEN
-        when(giftService.getAllGiftsByUser(userId)).thenReturn(List.of());
+        when(giftService.getGiftsByGiftIdea(userId, giftIdeaId)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getAllGifts(userId, null, null, null, null);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts")
+                        .param("giftIdeaId", giftIdeaId.toString())
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody().isEmpty());
+        verify(giftService).getGiftsByGiftIdea(userId, giftIdeaId);
     }
 
     @Test
-    void shouldGetGiftByIdSuccessfully() {
+    void shouldReturnGiftById() throws Exception {
         // GIVEN
         when(giftService.getGiftById(giftId, userId)).thenReturn(testGift);
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.getGiftById(giftId, userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.id").value(giftId.toString()))
+                .andExpect(jsonPath("$.title").value("Test Gift"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        assertEquals(giftId, response.getBody().getId());
-        verify(giftService, times(1)).getGiftById(giftId, userId);
+        verify(giftService).getGiftById(giftId, userId);
     }
 
     @Test
-    void shouldSearchGifts() {
+    void shouldReturnNotFoundWhenGiftDoesNotExist() throws Exception {
         // GIVEN
-        String query = "birthday";
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.searchGifts(userId, query)).thenReturn(gifts);
+        when(giftService.getGiftById(giftId, userId))
+                .thenThrow(new ResourceNotFoundException("Gift not found with id: " + giftId));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.searchGifts(query, userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).searchGifts(userId, query);
+        verify(giftService).getGiftById(giftId, userId);
     }
 
     @Test
-    void shouldReturnEmptyListWhenSearchYieldsNoResults() {
+    void shouldSearchGiftsAndReturnMatches() throws Exception {
         // GIVEN
-        String query = "nonexistent";
-        when(giftService.searchGifts(userId, query)).thenReturn(List.of());
+        when(giftService.searchGifts(userId, "Test")).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.searchGifts(query, userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/search")
+                        .param("query", "Test")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)))
+                .andExpect(jsonPath("$[0].title").value("Test Gift"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody().isEmpty());
+        verify(giftService).searchGifts(userId, "Test");
     }
 
     @Test
-    void shouldGetNotPurchasedGifts() {
+    void shouldReturnEmptyListWhenSearchYieldsNoResults() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getNotPurchasedGifts(userId)).thenReturn(gifts);
+        when(giftService.searchGifts(userId, "NonExistent")).thenReturn(Collections.emptyList());
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getNotPurchasedGifts(userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/search")
+                        .param("query", "NonExistent")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(0)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getNotPurchasedGifts(userId);
+        verify(giftService).searchGifts(userId, "NonExistent");
     }
 
     @Test
-    void shouldGetNotGivenGifts() {
+    void shouldReturnNotPurchasedGifts() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getNotGivenGifts(userId)).thenReturn(gifts);
+        when(giftService.getNotPurchasedGifts(userId)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getNotGivenGifts(userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/not-purchased")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getNotGivenGifts(userId);
+        verify(giftService).getNotPurchasedGifts(userId);
     }
 
     @Test
-    void shouldGetRecentGifts() {
+    void shouldReturnEmptyListWhenAllGiftsPurchased() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getRecentGifts(userId)).thenReturn(gifts);
+        when(giftService.getNotPurchasedGifts(userId)).thenReturn(Collections.emptyList());
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getRecentGifts(userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/not-purchased")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(0)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getRecentGifts(userId);
+        verify(giftService).getNotPurchasedGifts(userId);
     }
 
     @Test
-    void shouldGetGiftsByWorkflowOrder() {
+    void shouldReturnNotGivenGifts() throws Exception {
         // GIVEN
-        List<Gift> gifts = List.of(testGift);
-        when(giftService.getGiftsByWorkflowOrder(userId)).thenReturn(gifts);
+        when(giftService.getNotGivenGifts(userId)).thenReturn(List.of(testGift));
 
-        // WHEN
-        ResponseEntity<List<Gift>> response = giftController.getGiftsByWorkflowOrder(userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/not-given")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(1, response.getBody().size());
-        verify(giftService, times(1)).getGiftsByWorkflowOrder(userId);
+        verify(giftService).getNotGivenGifts(userId);
     }
 
     @Test
-    void shouldCheckIfGiftIdeaIsAlreadyUsed() {
+    void shouldReturnEmptyListWhenAllGiftsGiven() throws Exception {
+        // GIVEN
+        when(giftService.getNotGivenGifts(userId)).thenReturn(Collections.emptyList());
+
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/not-given")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(0)));
+
+        verify(giftService).getNotGivenGifts(userId);
+    }
+
+    @Test
+    void shouldReturnRecentGifts() throws Exception {
+        // GIVEN
+        when(giftService.getRecentGifts(userId)).thenReturn(List.of(testGift));
+
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/recent")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(1)));
+
+        verify(giftService).getRecentGifts(userId);
+    }
+
+    @Test
+    void shouldReturnGiftsSortedByWorkflowOrder() throws Exception {
+        // GIVEN
+        Gift plannedGift = createTestGift("Planned Gift", GiftStatus.PLANNED);
+        Gift boughtGift  = createTestGift("Bought Gift",  GiftStatus.BOUGHT);
+        Gift giftedGift  = createTestGift("Gifted Gift",  GiftStatus.GIFTED);
+        when(giftService.getGiftsByWorkflowOrder(userId))
+                .thenReturn(List.of(plannedGift, boughtGift, giftedGift));
+
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/workflow-order")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$", hasSize(3)))
+                .andExpect(jsonPath("$[0].status").value("PLANNED"))
+                .andExpect(jsonPath("$[1].status").value("BOUGHT"))
+                .andExpect(jsonPath("$[2].status").value("GIFTED"));
+
+        verify(giftService).getGiftsByWorkflowOrder(userId);
+    }
+
+    @Test
+    void shouldReturnTrueWhenGiftIdeaIsAlreadyUsed() throws Exception {
         // GIVEN
         when(giftService.isGiftIdeaAlreadyUsed(userId, giftIdeaId)).thenReturn(true);
 
-        // WHEN
-        ResponseEntity<Boolean> response = giftController.isGiftIdeaAlreadyUsed(giftIdeaId, userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/check-gift-idea/{giftIdeaId}", giftIdeaId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(content().string("true"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertTrue(response.getBody());
-        verify(giftService, times(1)).isGiftIdeaAlreadyUsed(userId, giftIdeaId);
+        verify(giftService).isGiftIdeaAlreadyUsed(userId, giftIdeaId);
     }
 
     @Test
-    void shouldReturnFalseWhenGiftIdeaNotUsed() {
+    void shouldReturnFalseWhenGiftIdeaIsNotYetUsed() throws Exception {
         // GIVEN
         when(giftService.isGiftIdeaAlreadyUsed(userId, giftIdeaId)).thenReturn(false);
 
-        // WHEN
-        ResponseEntity<Boolean> response = giftController.isGiftIdeaAlreadyUsed(giftIdeaId, userId);
+        // WHEN & THEN
+        mockMvc.perform(get("/gifts/check-gift-idea/{giftIdeaId}", giftIdeaId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(content().string("false"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertFalse(response.getBody());
+        verify(giftService).isGiftIdeaAlreadyUsed(userId, giftIdeaId);
     }
 
     @Test
-    void shouldUpdateGiftSuccessfully() {
+    void shouldUpdateGiftSuccessfully() throws Exception {
         // GIVEN
-        Gift updatedGift = new Gift();
-        updatedGift.setTitle("Updated Title");
-        when(giftService.updateGift(giftId, userId, updatedGift)).thenReturn(testGift);
+        Gift updatedGift = createTestGift("Updated Gift", GiftStatus.BOUGHT);
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.updateGift(giftId, updatedGift, userId);
+        when(giftService.updateGift(eq(giftId), eq(userId), any(Gift.class))).thenReturn(updatedGift);
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertNotNull(response.getBody());
-        verify(giftService, times(1)).updateGift(giftId, userId, updatedGift);
+        // WHEN & THEN
+        mockMvc.perform(put("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(updatedGift)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.title").value("Updated Gift"))
+                .andExpect(jsonPath("$.status").value("BOUGHT"));
+
+        verify(giftService).updateGift(eq(giftId), eq(userId), any(Gift.class));
     }
 
     @Test
-    void shouldUpdateGiftStatusToBought() {
+    void shouldReturnNotFoundWhenUpdatingNonExistentGift() throws Exception {
         // GIVEN
-        testGift.setStatus(GiftStatus.BOUGHT);
-        testGift.setPurchaseDate(LocalDate.now());
-        when(giftService.updateGiftStatus(giftId, userId, GiftStatus.BOUGHT)).thenReturn(testGift);
+        Gift updatedGift = createTestGift("Updated Gift", GiftStatus.BOUGHT);
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.updateGiftStatus(giftId, GiftStatus.BOUGHT, userId);
+        when(giftService.updateGift(eq(giftId), eq(userId), any(Gift.class)))
+                .thenThrow(new ResourceNotFoundException("Gift not found with id: " + giftId));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(GiftStatus.BOUGHT, response.getBody().getStatus());
-        verify(giftService, times(1)).updateGiftStatus(giftId, userId, GiftStatus.BOUGHT);
+        // WHEN & THEN
+        mockMvc.perform(put("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON)
+                        .content(objectMapper.writeValueAsString(updatedGift)))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
+
+        verify(giftService).updateGift(eq(giftId), eq(userId), any(Gift.class));
     }
 
     @Test
-    void shouldUpdateGiftStatusToGifted() {
+    void shouldUpdateGiftStatusToBought() throws Exception {
         // GIVEN
-        testGift.setStatus(GiftStatus.GIFTED);
-        testGift.setGivenDate(LocalDate.now());
-        when(giftService.updateGiftStatus(giftId, userId, GiftStatus.GIFTED)).thenReturn(testGift);
+        Gift boughtGift = createTestGift("Test Gift", GiftStatus.BOUGHT);
+        boughtGift.setPurchaseDate(LocalDate.now());
+        when(giftService.updateGiftStatus(giftId, userId, GiftStatus.BOUGHT)).thenReturn(boughtGift);
 
-        // WHEN
-        ResponseEntity<Gift> response = giftController.updateGiftStatus(giftId, GiftStatus.GIFTED, userId);
+        // WHEN & THEN
+        mockMvc.perform(patch("/gifts/{id}/status", giftId)
+                        .param("status", "BOUGHT")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("BOUGHT"));
 
-        // THEN
-        assertEquals(HttpStatus.OK, response.getStatusCode());
-        assertEquals(GiftStatus.GIFTED, response.getBody().getStatus());
-        verify(giftService, times(1)).updateGiftStatus(giftId, userId, GiftStatus.GIFTED);
+        verify(giftService).updateGiftStatus(giftId, userId, GiftStatus.BOUGHT);
     }
 
     @Test
-    void shouldDeleteGiftAndReturnNoContentStatus() {
+    void shouldUpdateGiftStatusToGifted() throws Exception {
+        // GIVEN
+        Gift giftedGift = createTestGift("Test Gift", GiftStatus.GIFTED);
+        giftedGift.setGivenDate(LocalDate.now());
+        when(giftService.updateGiftStatus(giftId, userId, GiftStatus.GIFTED)).thenReturn(giftedGift);
+
+        // WHEN & THEN
+        mockMvc.perform(patch("/gifts/{id}/status", giftId)
+                        .param("status", "GIFTED")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isOk())
+                .andExpect(jsonPath("$.status").value("GIFTED"));
+
+        verify(giftService).updateGiftStatus(giftId, userId, GiftStatus.GIFTED);
+    }
+
+    @Test
+    void shouldReturnNotFoundWhenUpdatingStatusOfNonExistentGift() throws Exception {
+        // GIVEN
+        when(giftService.updateGiftStatus(giftId, userId, GiftStatus.BOUGHT))
+                .thenThrow(new ResourceNotFoundException("Gift not found with id: " + giftId));
+
+        // WHEN & THEN
+        mockMvc.perform(patch("/gifts/{id}/status", giftId)
+                        .param("status", "BOUGHT")
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
+
+        verify(giftService).updateGiftStatus(giftId, userId, GiftStatus.BOUGHT);
+    }
+
+    @Test
+    void shouldDeleteGiftAndReturnNoContent() throws Exception {
         // GIVEN
         doNothing().when(giftService).deleteGift(giftId, userId);
 
-        // WHEN
-        ResponseEntity<Void> response = giftController.deleteGift(giftId, userId);
+        // WHEN & THEN
+        mockMvc.perform(delete("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNoContent());
 
-        // THEN
-        assertEquals(HttpStatus.NO_CONTENT, response.getStatusCode());
-        assertNull(response.getBody());
-        verify(giftService, times(1)).deleteGift(giftId, userId);
+        verify(giftService).deleteGift(giftId, userId);
+    }
+
+    @Test
+    void shouldReturnNotFoundWhenDeletingNonExistentGift() throws Exception {
+        // GIVEN
+        doThrow(new ResourceNotFoundException("Gift not found with id: " + giftId))
+                .when(giftService).deleteGift(giftId, userId);
+
+        // WHEN & THEN
+        mockMvc.perform(delete("/gifts/{id}", giftId)
+                        .with(jwt().jwt(builder -> builder.subject(userId.toString())))
+                        .contentType(APPLICATION_JSON))
+                .andDo(MockMvcResultHandlers.print())
+                .andExpect(status().isNotFound());
+
+        verify(giftService).deleteGift(giftId, userId);
     }
 }
-
